--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Author By Rizwan
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DelhiJokes</title>
+</head>
+<body>
+    <p>
+        jokes By Rizwan
+    </p>
+</body>
+</html>
